--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "apollo-boost": "^0.1.13",
     "apollo-server-lambda": "^2.0.1",
-    "graphql": "^0.13.2",
+    "graphql": "^14.0.2",
     "react": "^16.3.1",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "apollo": "^1.7.0",
-    "start-server-and-test": "^1.7.0",
-    "netlify-lambda": "^0.4.0"
+    "netlify-lambda": "^1.0.2",
+    "start-server-and-test": "^1.7.0"
   }
 }
